--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Section</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,10 +21,11 @@
         </div>
         <div class="second-items">
             <img width="550px" src="image.jpg" alt="">
-
         </div>
-
     </section>
+    <footer>
+        created by <a style="text-decoration: none;color: white;" href="">Vengadesh</a>
+    </footer>
     
 </body>
 </html>
